<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SellFragment">

    <TextView
        android:id="@+id/create_advert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_advert"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/advert_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/advert_info"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_advert" />

    <Button
        android:id="@+id/btnSelectPhotos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="@string/select_photos"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/advert_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>