<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/right_left_margin"
    android:layout_marginRight="@dimen/right_left_margin"
    android:padding="@dimen/main_layout_padding"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:id="@+id/forgotPassTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/underline_border"
        android:drawable="@drawable/underline_border"
        android:fontFamily="@font/maven_pro"
        android:padding="5dp"
        android:text="@string/forgotten_password"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin_large"
        android:fontFamily="@font/maven_pro"
        android:text="@string/email"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassTxt" />

    <EditText
        android:id="@+id/etEmailForgotPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/maven_pro"
        android:inputType="textEmailAddress"
        android:text="@string/email_hint"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTxt" />

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin_large"
        android:background="@drawable/round_button"
        android:fontFamily="@font/maven_pro"
        android:text="@string/reset_pass"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailForgotPass" />
</androidx.constraintlayout.widget.ConstraintLayout>