<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/right_left_margin"
            android:layout_marginTop="@dimen/top_bottom_margin"
            android:layout_marginRight="@dimen/right_left_margin"
            android:padding="@dimen/main_layout_padding">

            <com.shobhitpuri.custombuttons.GoogleSignInButton
                android:id="@+id/btnGoogleCreate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/maven_pro"
                android:text="@string/google_btn_String"
                app:isDarkTheme="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--use padding to increase button size-->
            <com.facebook.login.widget.LoginButton
                android:id="@+id/btnFacebookCreate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/item_margin_medium"
                android:drawablePadding="55dp"
                android:fontFamily="@font/maven_pro"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/fb_btn_String"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnGoogleCreate" />

            <TextView
                android:id="@+id/orTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_margin_large"
                android:fontFamily="@font/maven_pro"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/or"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnFacebookCreate" />

            <TextView
                android:id="@+id/emailTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_margin_large"
                android:fontFamily="@font/maven_pro"
                android:text="@string/email"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/orTxt" />

            <EditText
                android:id="@+id/etEmailCreate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_box"
                android:ems="10"
                android:fontFamily="@font/maven_pro"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailTxt" />

            <TextView
                android:id="@+id/passwordTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_margin_medium"
                android:fontFamily="@font/maven_pro"
                android:text="@string/pass"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etEmailCreate" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPasswordLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordTxt"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/etPasswordCreate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_box"
                    android:ems="10"
                    android:fontFamily="@font/maven_pro"
                    android:inputType="textPassword"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/passwordInfoTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/maven_pro"
                android:text="@string/password_info"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPasswordLayout" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_margin_large"
                android:background="@drawable/round_button"
                android:fontFamily="@font/maven_pro"
                android:text="@string/reg"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordInfoTxt" />

            <TextView
                android:id="@+id/termsandconditionTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_margin_small"
                android:fontFamily="@font/maven_pro"
                android:text="@string/TCtext"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>